deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anon-blog
  namespace: anon-blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: anon-blog
  template:
    metadata:
      labels:
        app: anon-blog
    spec:
      containers:
      - name: anon-blog
        image: toddpratt/anon-blog:latest
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: config-volume
          mountPath: /config
          readOnly: true
      volumes:
      - name: config-volume
        secret:
          secretName: anon-blog-config
          items:
          - key: creds.json
            path: creds.json
