deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anon-blog
  namespace: anon-blog
spec:
  selector:
    app: anon-blog
  ports:
    - port: 80
      targetPort: 5000
