deploy/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: anon-blog
  namespace: anon-blog
spec:
  entryPoints:
  - websecure
  tls:
    secretName: anon-blog-cert-secret
  routes:
  - match: Host(`abapi-test.vengarl.com`)
    kind: Rule
    services:
    - name: anon-blog
      port: 80
